change project banners

--- a/quickly.html
+++ b/quickly.html
@@ -20,13 +20,13 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <div id="home-div"><a href="https://ajzhen.com" id="home" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
+      <div id="home-div"><a href="https://ajzhen.com" id="home-b" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
 
       <div id="nav-div">
-        <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
-        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
+        <div class="nav sink"><a href="https://ajzhen.com/about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
         
-        <div id="darkmode" class="nav">Dark Mode
+        <div id="darkmode-b" class="nav">Dark Mode
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
@@ -36,7 +36,8 @@
       </div>
     </div>
 
-    <div id="quickly-banner" class="banner">
+    <div id="quickly-banner" class="banner"></div>
+    <div class="banner-info">
       <div id="valign-div">
         <div class="heading-container">
           <div>
