--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
         <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
         
-        <div id="darkmode" class="nav">Dark Mode
+        <div id="darkmode-w" class="nav">Dark Mode
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
