--- a/caida.html
+++ b/caida.html
@@ -20,13 +20,13 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <div id="home-div"><a href="https://ajzhen.com" id="home" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
+      <div id="home-div"><a href="https://ajzhen.com" id="home-b" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
 
       <div id="nav-div">
-        <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
-        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
+        <div class="nav sink"><a href="https://ajzhen.com/about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
         
-        <div id="darkmode" class="nav">Dark Mode
+        <div id="darkmode-b" class="nav">Dark Mode
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
@@ -36,7 +36,8 @@
       </div>
     </div>
 
-    <div id="caida-banner" class="banner">
+    <div id="caida-banner" class="banner"></div>
+    <div class="banner-info">
       <div id="valign-div">
         <div class="heading-container">
           <div>
@@ -44,7 +45,7 @@
             <div class="inline-div" style="padding-right: 4.5vw">
               <p id="work-header">Timeline</p>
               <p id="work-header">Role</p>
-              <p id="work-header">Teammate</p>
+              <p id="work-header">Team</p>
               <p id="work-header">Supervisor</p>
             </div>
             <div class="inline-div">
@@ -61,8 +62,8 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
         <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
+        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
       </div>
     </div>
 
