--- a/long-term.html
+++ b/long-term.html
@@ -20,13 +20,13 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <div id="home-div"><a href="https://ajzhen.com" id="home" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
+      <div id="home-div"><a href="https://ajzhen.com" id="home-w" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
 
       <div id="nav-div">
-        <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
-        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
+        <div class="nav sink"><a href="https://ajzhen.com/about" id="about-w" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo-w" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
         
-        <div id="darkmode" class="nav">Dark Mode
+        <div id="darkmode-w" class="nav">Dark Mode
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
@@ -36,7 +36,8 @@
       </div>
     </div>
 
-    <div class="longterm-banner banner">
+    <div id="longterm-banner" class="banner"></div>
+    <div class="banner-info">
       <div id="valign-div">
         <div class="heading-container">
           <div>
@@ -80,7 +81,7 @@
              Line animation</p>
         </div>
       </div>
-      <div class="grid" style="margin-bottom: 10vw"><img src="assets/long-term/smile.gif"></div>
+      <div class="grid"><img src="assets/long-term/smile.gif"></div>
     </div>
 
     <div class="body-container-longterm">
