fix darkmode, remove movie info, bouncing description

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </div>
       </div>
       
-      <!-- <p id="description" class="hvr-bob">UX Developer + Designer</p>
-      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p> -->
+      <p id="description" class="hvr-bob">UX Developer + Designer</p>
+      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p>
       
-      <p id="description">UX Developer + Designer</p>
-      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p>
+      <!-- <p id="description">UX Developer + Designer</p>
+      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p> -->
     </div>
   </div>
 
