--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
         <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
         
-        <div id="darkmode-w" class="nav">Dark Mode
+        <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
@@ -75,11 +75,6 @@
         <div class="movie">
           <p class="aboutHeader">Last Film Watched</p>
           <img src="assets/movies/avengers-endgame.jpg" width="80%" id="movie-poster">
-          <div class="movie-spacing">
-            <p>IMDb Rating: 8.9 / 10 🎬</p>
-            <p><a href="https://en.wikipedia.org/wiki/Avengers:_Endgame" target="_blank" id="movie-wiki">Avengers: Endgame - Wikipedia</a></p>
-            <p class="movie-spacing">... and the film before? <a href="https://en.wikipedia.org/wiki/Missing_Link_(2019_film)" target="_blank" id="movie-wiki">Missing Link</a></p>
-          </div>
         </div>
         <div></div>
       </div>
