update movie, minify js

--- a/snaash.html
+++ b/snaash.html
@@ -79,7 +79,7 @@
       <div><p id="body-header">Description</p></div>
       <div>
         <p>For a web design course spanning 5 weeks, our team was tasked with 
-           designing and prototyping an accessible web application to accomodate 
+           designing and prototyping an accessible web application to accommodate 
            the lifestyles of people who are aged 50 and up. Our idea-turned 
            product would then participate in a Shark Tank, entrepreneur-themed 
            competition with 11 other teams with  real “sharks” (in the form of 
