clean css, add color block

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
         </div>
       </div>
     </div>
+
     <p id="description">Andrew designs and develops for digital experiences.</p>
     <p id="description-2">He is a design & interaction student at UC San Diego and had his most recent role at CAIDA.</p>
+
+    <div id="color-block"></div>
   </div>
 
-  <div class="content">
+  <div class="content-margins">
     <p class="content-header">WORK & INVOLVEMENT</p>
     <section>
       <div class="grid-container-right">
@@ -56,7 +59,7 @@
         <div>
           <p id="title">CAIDA Internship</p>
           <p id="summary">Summer-long experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
-          <p id="year">2018</p>
+          <p id="year">SUMMER 2018</p>
         </div>
       </div>
     </section>
@@ -66,7 +69,7 @@
         <div>
           <p id="title">Snaash iOS App</p>
           <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
-          <p id="year">2018 - PRESENT</p>
+          <p id="year">SUMMER 2018 - PRESENT</p>
         </div>
         <div class="grid-item grid-item-right">
           <div class="grid-content">
@@ -90,7 +93,7 @@
         <div>
           <p id="title">Zilter Web App</p>
           <p id="summary">Design, prototyping and development of a website concept featuring built-in research done conveniently for you.</p>
-          <p id="year">2018 - PRESENT</p>
+          <p id="year">WINTER 2018 - PRESENT</p>
         </div>
       </div>
     </section>
@@ -100,7 +103,7 @@
         <div>
           <p id="title">Quickly Web App</p>
           <p id="summary">Development of a class-scheduling tool for UC San Diego students under contract work.</p>
-          <p id="year">2018</p>
+          <p id="year">SPRING 2018</p>
         </div>
         <div class="grid-item grid-item-right">
           <div class="grid-content">
@@ -121,9 +124,9 @@
           </div>
         </div>
         <div>
-          <p id="title" style="color: inherit;">To-Do App Redesign</p>
+          <p id="title">To-Do App Redesign</p>
           <p id="summary">Redesign and implementation of a to-do list application based on the (JavaScript) Meteor web framework.</p>
-          <p id="year">2018</p>
+          <p id="year">SPRING 2018</p>
         </div>
       </div>
     </section>
