--- a/long-term.html
+++ b/long-term.html
@@ -95,7 +95,7 @@
              Microsoft Excel <br/><br/>
              Data Cleaning <br/>
              Finance Tracking <br/><br/>
-             <a href="https://github.com/andrewzhen/mymoney-public">GitHub Repository</a>
+             <a href="https://github.com/andrewzhen/mymoney-public" target="_blank">GitHub Repository</a>
           </p>
         </div>
       </div>
