fix nav, z-index

--- a/caida.html
+++ b/caida.html
@@ -16,15 +16,18 @@
   <link rel="shortcut icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
+
+  <script src="jquery.js"></script>
+  <script src="fadein.js"></script>
 </head>
 
 <body id="body">
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav sink"><a href="https://ajzhen.com" id="home" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
-      <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
-      <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">DARK MODE</span>
@@ -62,8 +65,8 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
-        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
+        <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/" target="_blank">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
+        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/" target="_blank">http://www.caida.org/home/</a></p>
       </div>
     </div>
 
