--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav sink"><a href="https://ajzhen.com" id="home-x" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
-      <div class="nav sink"><a href="https://ajzhen.com/about" id="about-x" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
-      <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo-x" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-x" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-x" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-x" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt-x">DARK MODE</span>
@@ -43,9 +43,7 @@
     <p id="description-2">He is a design & interaction student at UC San Diego and had his most recent role at CAIDA.</p>
 
     <div id="color-block"></div>
-  </div>
-
-  <div class="content-margins">
+  
     <p class="content-header">WORK & INVOLVEMENT</p>
     <section>
       <div class="grid-container-right">
