--- a/zilter.html
+++ b/zilter.html
@@ -61,8 +61,8 @@
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
-        <p>Website — <a id="link" href="https://zilterproject.github.io/">https://zilterproject.github.io/</a></p>
-        <p>GitHub Repository — <a id="link" href="https://github.com/zilterproject/zilterproject.github.io">https://github.com/zilterproject/zilterproject.github.io</a></p>
+        <p>Website — <a id="link" href="https://zilterproject.github.io/" target="_blank">https://zilterproject.github.io/</a></p>
+        <p>GitHub Repository — <a id="link" href="https://github.com/zilterproject/zilterproject.github.io" target="_blank">https://github.com/zilterproject/zilterproject.github.io</a></p>
       </div>
     </div>
 
