add color block

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <p id="description">Andrew designs and develops for digital experiences.</p>
     <p id="description-2">He is a design & interaction student at UC San Diego and had his most recent role at CAIDA.</p>
 
+    <div id="white-block"></div>
     <div id="color-block"></div>
   
     <p class="content-header">WORK & INVOLVEMENT</p>
