--- a/long-term.html
+++ b/long-term.html
@@ -22,9 +22,9 @@
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav sink"><a href="https://ajzhen.com" id="home-w" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
-      <div class="nav sink"><a href="https://ajzhen.com/about" id="about-w" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
-      <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo-w" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-w" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-w" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-w" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt-w">DARK MODE</span>
