--- a/about.html
+++ b/about.html
@@ -21,18 +21,18 @@
   <script src="fadein.js"></script>
 </head>
 
-<body id="body">
+<body id="body" onload="activeTab('about-b')">
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav"><a href="https://ajzhen.com" id="home-x" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
-      <div class="nav"><a href="https://ajzhen.com/about" id="about-x" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-x" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-b" onclick="stilldark()">Home</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b" target="_blank">Photography</a></div>
 
       <div id="nav-div">
-        <div id="darkmode" class="nav"><span id="darkmode-txt-x">DARK MODE</span>
+        <div id="darkmode" class="nav"><span id="darkmode-txt-b">Dark Mode</span>
           <label class="switch">
-            <input id="checkDark" type="checkbox" onchange="darkmode()">
+            <input id="checkDark" type="checkbox" onchange="darkmode('about-b')">
             <span class="slider round"></span>
           </label>
         </div>
@@ -69,7 +69,7 @@
              enjoying a thoughtful thriller film, and secretly browsing cat 
              videos on Instagram.</p>
 
-          <p class="aboutHeader">Last film watched</p>
+          <p class="aboutHeader">Last Film Watched</p>
           <div id="movie">
             <img id="movie-img" src="assets/movie/detective-pikachu.jpg"/>
             <p id="movie-txt">Pokémon Detective Pikachu</p>
@@ -78,7 +78,7 @@
 
         <div id="contact">
           <ul>
-            <li><span id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</span></li>
+            <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
             <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')" target="_blank">Résumé</a></li>
             <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')" target="_blank">GitHub</a></li>
