--- a/long-term.html
+++ b/long-term.html
@@ -22,12 +22,12 @@
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav"><a href="https://ajzhen.com" id="home-w" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">HOME</a></div>
-      <div class="nav"><a href="https://ajzhen.com/about" id="about-w" onmouseover="mo('about')" onmouseleave="ml('about')">ABOUT</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-w" onmouseover="mo('photo')" onmouseleave="ml('photo')" target="_blank">PHOTOGRAPHY</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-w" onclick="stilldark()">Home</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-w">About</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-w" target="_blank">Photography</a></div>
 
       <div id="nav-div">
-        <div id="darkmode" class="nav"><span id="darkmode-txt-w">DARK MODE</span>
+        <div id="darkmode" class="nav"><span id="darkmode-txt-w">Dark Mode</span>
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
@@ -43,7 +43,7 @@
           <div>
             <div>
               <p id="longterm-title" id="work-title">Long Term</p>
-              <p id="longterm-description">A collection of design and developement projects.</p>
+              <p id="longterm-description">A collection of my personal design and developement projects.</p>
             </div>
             <div></div>
           </div>
