--- a/about.html
+++ b/about.html
@@ -47,25 +47,25 @@
       <div class="about-container">
         <div class="padding-bottom">
           <p class="aboutHeader">Biography</p>
-          <p class="about-p about-right-pad">I’m a third year student studying Cognitive 
+          <p class="about-p about-right-pad" id="about-txt">I’m a third year student studying Cognitive 
              Science (Design / Interaction concentration) at UC San Diego. </p>
-          <p class="about-p about-right-pad">Right now, I’m actively applying for UX Developer and 
+          <p class="about-p about-right-pad" id="about-txt">Right now, I’m actively applying for UX Developer and 
              Designer intern positions for Summer 2019.</p>
         </div>
         
         <div class="padding-bottom">
           <p class="aboutHeader">Experience</p>
-          <p class="about-p about-right-pad">Previously, I’ve had the opportunities to work as a UX Developer 
+          <p class="about-p about-right-pad" id="about-txt">Previously, I’ve had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1" target="_blank">CAIDA</a> and as a Data 
              Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a> 
              before that.</p>
-          <p class="about-p about-right-pad">Apart from being in the office, you can catch me working on or 
+          <p class="about-p about-right-pad" id="about-txt">Apart from being in the office, you can catch me working on or 
              brainstorming for my next project.</p>
         </div>
         
         <div class="padding-bottom">
           <p class="aboutHeader">Interests</p>
-          <p class="about-p">On good days, I spend my time burning food calories through basketball, 
+          <p class="about-p" id="about-txt">On good days, I spend my time burning food calories through basketball, 
              enjoying a thoughtful thriller film, and secretly browsing cat 
              videos on Instagram.</p>
 
