--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
   <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
   
-  <script src="jquery.js"></script>
-  <script src="fadein.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/fadein.js"></script>
 </head>
 
-<body id="body" onload="activeTab('home-b')">
+<body id="body">
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav"><a href="https://ajzhen.com" id="home-b" onclick="stilldark()">Home</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b" target="_blank">Photography</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt-b">Dark Mode</span>
           <label class="switch">
-            <input id="checkDark" type="checkbox" onchange="darkmode('home-b')">
+            <input id="checkDark" type="checkbox" onchange="toggle()">
             <span class="slider round"></span>
           </label>
         </div>
@@ -164,6 +164,6 @@
     </div>
   </div>
 
-  <script src="script.js" type="text/javascript"></script>
+  <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
