--- a/zilter.html
+++ b/zilter.html
@@ -22,14 +22,14 @@
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav"><a href="https://ajzhen.com" id="home" onclick="stilldark()">Home</a></div>
-      <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
-      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo" target="_blank">Photography</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
+      <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
 
       <div id="nav-div">
-        <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
+        <div id="darkmode" class="nav"><span id="darkmode-txt-bx">Dark Mode</span>
           <label class="switch">
-            <input id="checkDark" type="checkbox" onchange="darkmode()">
+            <input id="checkDark" type="checkbox" onchange="toggle()">
             <span class="slider round"></span>
           </label>
         </div>
@@ -347,6 +347,6 @@
     </div>
   </div>
 
-  <script src="script.js" type="text/javascript"></script>
+  <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
