--- a/snaash.html
+++ b/snaash.html
@@ -22,8 +22,8 @@
   <div class="content-margins">
     <div id="header">
       <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
-      <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
-      <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx" target="_blank">Photography</a></div>
 
       <div id="nav-div">
