fix snaash, add fade in contacts

--- a/about.html
+++ b/about.html
@@ -75,8 +75,11 @@
             <p id="movie-txt">Pokémon Detective Pikachu</p>
           </div>
         </div>
+      </div>
+    </section>
 
-        <div id="contact">
+    <section>
+      <div id="contact">
           <ul>
             <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
             <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')" target="_blank">Résumé</a></li>
@@ -85,7 +88,6 @@
             <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')" target="_blank">Instagram</a></li>
           </ul>
         </div>
-      </div>
     </section>
 
     <div id="footer">
