--- a/snaash.html
+++ b/snaash.html
@@ -263,7 +263,7 @@
     
     <div class="ca-container">
       <div></div>
-      <div><img src="assets/snaash/yahoo.png"></div>
+      <div><img src="assets/snaash/reddit-dark.png"></div>
       <div class="notable-features">
         <p><span class="ca-title">Notable Features</span> <br/>
            — Semi-Anonymity through Usernames <br/>
@@ -287,7 +287,7 @@
 
     <div class="ca-container">
       <div></div>
-      <div><img id="reddit" src="assets/snaash/reddit-dark.png"></div>
+      <div><img id="reddit" src="assets/snaash/yahoo.png"></div>
       <div class="notable-features">
         <p><span class="ca-title">Notable Features</span> <br/>
            — Link all Activity back to User <br/>
@@ -371,10 +371,6 @@
            the eagerness of the other, Snaash creates a healthy relationship 
            between altruistic users focused on giving back to each other.</p>
       </div>
-      <div></div>
-      <center><br/><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></center>
-      <div></div>
-      <p id="img-caption">A fitting fortune cookie message that I personally received</p>
     </div>
 
     <div class="conclusion-container">
@@ -386,6 +382,10 @@
            addition, we would need to find a way to verify the age of those 50 
            and up to avoid wrongful use of the application.</p>
       </div>
+      <div></div>
+      <center><br/><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></center>
+      <div></div>
+      <p id="img-caption">A fitting fortune cookie message that I personally received</p>
     </div>
 
     <div id="footer">
