--- a/zilter.html
+++ b/zilter.html
@@ -283,7 +283,7 @@
            click on a result to see photos and all the technical specifications 
            as well as critical reviews and videos that help them make the best choice.
            <br/> <br/>
-           The working prototype can be accessed <a id="link" href="https://zilterproject.github.io/">here</a>.
+           The working prototype can be accessed <a id="link" href="https://zilterproject.github.io/" target="_blank">here</a>.
          </p>
       </div>
     </div>
