--- a/index.html
+++ b/index.html
@@ -147,15 +147,17 @@
       </div>
     </section>
 
-    <div id="contact">
-      <ul>
-        <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
-        <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')" target="_blank">Résumé</a></li>
-        <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')" target="_blank">LinkedIn</a></li>
-        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')" target="_blank">GitHub</a></li>
-        <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')" target="_blank">Instagram</a></li>
-      </ul>
-    </div>
+    <section>
+      <div id="contact">
+        <ul>
+          <li><span id="email" onmouseover="emailOver()" onmouseleave="emailLeave()">Email</span></li>
+          <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')" target="_blank">Résumé</a></li>
+          <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')" target="_blank">GitHub</a></li>
+          <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')" target="_blank">Instagram</a></li>
+        </ul>
+      </div>
+    </section>
 
     <div id="footer">
       <p id="note">Built From The Ground Up</p>
