update colors, increase work margins

--- a/caida.html
+++ b/caida.html
@@ -39,15 +39,17 @@
     <div id="caida-banner" class="banner"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <div class="heading-container">
+        <p id="work-title">CAIDA Internship</p>
+        <div class="body-container">
           <div>
-            <p id="work-title">CAIDA Internship</p>
             <div class="inline-div" style="padding-right: 4.5vw">
               <p id="work-header">Timeline</p>
               <p id="work-header">Role</p>
               <p id="work-header">Team</p>
               <p id="work-header">Supervisor</p>
             </div>
+          </div>
+          <div>
             <div class="inline-div">
               <p id="work-value">July 2018 — September 2018</p>
               <p id="work-value">UX Developer</p>
