--- a/long-term.html
+++ b/long-term.html
@@ -39,14 +39,9 @@
     <div id="longterm-banner" class="banner"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <div class="heading-container">
-          <div>
-            <div>
-              <p id="longterm-title" id="work-title">Long Term</p>
-              <p id="longterm-description">A collection of my personal design and developement projects.</p>
-            </div>
-            <div></div>
-          </div>
+        <div>
+          <p id="longterm-title" id="work-title">Long Term</p>
+          <p id="longterm-description">A collection of my personal design and development projects.</p>
         </div>
       </div>
     </div>
