--- a/quickly.html
+++ b/quickly.html
@@ -39,15 +39,17 @@
     <div id="quickly-banner" class="banner"></div>
     <div class="banner-info">
       <div id="valign-div">
+        <p id="work-title">Quickly Web App</p>
         <div class="heading-container">
           <div>
-            <p id="work-title">Quickly Web App</p>
             <div class="inline-div" style="padding-right: 4.5vw">
               <p id="work-header">Timeline</p>
               <p id="work-header">Role</p>
               <p id="work-header">Supervisor</p>
               <p id="work-header">Work Type</p>
             </div>
+          </div>
+          <div>
             <div class="inline-div">
               <p id="work-value">March 2018 — April 2018</p>
               <p id="work-value">Web App Developer</p>
