--- a/snaash.html
+++ b/snaash.html
@@ -39,15 +39,17 @@
     <div id="snaash-banner" class="banner"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <div class="heading-container">
+        <p id="work-title">Snaash iOS App</p>
+        <div class="body-container">
           <div>
-            <p id="work-title">Snaash iOS App</p>
             <div class="inline-div" style="padding-right: 4.5vw">
               <p id="work-header">Timeline</p>
               <p id="work-header">Role</p>
               <p id="work-header">Team</p>
               <p id="work-header">Course</p>
             </div>
+          </div>
+          <div>
             <div class="inline-div">
               <p id="work-value">August 2018 — September 2018</p>
               <p id="work-value">UX Designer</p>
