--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
 
           <p class="aboutHeader">Last Film Watched</p>
           <div id="movie">
-            <img id="movie-img" src="assets/movies/brightburn.jpeg"/>
-            <p id="movie-txt">Brightburn</p>
+            <img id="movie-img" src="assets/movies/aladdin.jpg"/>
+            <p id="movie-txt">Aladdin</p>
           </div>
         </div>
       </div>
