increase portrait quality, fix snaash CA imgs

--- a/snaash.html
+++ b/snaash.html
@@ -265,7 +265,7 @@
     
     <div class="ca-container">
       <div></div>
-      <div><img src="assets/snaash/reddit-dark.png"></div>
+      <div><img id="reddit" src="assets/snaash/reddit-dark.png"></div>
       <div class="notable-features">
         <p><span class="ca-title">Notable Features</span> <br/>
            — Semi-Anonymity through Usernames <br/>
@@ -289,7 +289,7 @@
 
     <div class="ca-container">
       <div></div>
-      <div><img id="reddit" src="assets/snaash/yahoo.png"></div>
+      <div><img src="assets/snaash/yahoo.png"></div>
       <div class="notable-features">
         <p><span class="ca-title">Notable Features</span> <br/>
            — Link all Activity back to User <br/>
