--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
@@ -65,12 +65,12 @@
 
     <section>
       <div class="grid-container-left">
-        <div>
+        <div id="work-des">
           <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
           <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
           <p id="year">SUMMER 2018 - PRESENT</p>
         </div>
-        <div class="grid-item grid-item-right">
+        <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/snaash">
               <img src="assets/snaash/thumbnail.jpg">
@@ -99,12 +99,12 @@
       
     <section>
       <div class="grid-container-left">
-        <div>
+        <div id="work-des">
           <a id="title" href="https://ajzhen.com/quickly">Quickly Web App</a>
           <p id="summary">Development of a class-scheduling tool for UC San Diego students under contract work.</p>
           <p id="year">SPRING 2018</p>
         </div>
-        <div class="grid-item grid-item-right">
+        <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/quickly">
               <img src="assets/quickly/thumbnail.jpg">
@@ -132,12 +132,12 @@
 
     <section>
       <div class="grid-container-left">
-        <div>
+        <div id="work-des">
           <a id="title" href="https://ajzhen.com/long-term">Long Term</a>
           <p id="summary">A collection of my personal design and development projects.</p>
           <p id="year">2018 - PRESENT</p>
         </div>
-        <div class="grid-item grid-item-right">
+        <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/long-term">
               <img src="assets/long-term/thumbnail.gif">
