--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     </div>
 
     <section>
-      <div class="aboutPic"><img src="assets/portrait.jpg"></div>
+      <div class="about-pic"><img src="assets/portrait.jpg"></div>
     </section>
 
     <section>
@@ -48,9 +48,8 @@
         <div class="padding-bottom">
           <p class="aboutHeader">Biography</p>
           <p class="about-p about-right-pad" id="about-txt">I’m a third year student studying Cognitive 
-             Science (Design / Interaction concentration) at UC San Diego. </p>
-          <p class="about-p about-right-pad" id="about-txt">Right now, I’m actively applying for UX Developer and 
-             Designer intern positions for Summer 2019.</p>
+             Science (Design / Interaction concentration) at UC San Diego. Right now, I’m actively applying for UX Design and 
+             Developer internship positions for Summer 2019.</p>
         </div>
         
         <div class="padding-bottom">
@@ -58,8 +57,7 @@
           <p class="about-p about-right-pad" id="about-txt">Previously, I’ve had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1" target="_blank">CAIDA</a> and as a Data 
              Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a> 
-             before that.</p>
-          <p class="about-p about-right-pad" id="about-txt">Apart from being in the office, you can catch me working on or 
+             before that. Apart from being in the office, you can catch me working on or 
              brainstorming for my next project.</p>
         </div>
         
@@ -69,7 +67,7 @@
              enjoying a thoughtful thriller film, and secretly browsing cat 
              videos on Instagram.</p>
 
-          <p class="aboutHeader">Last Film Watched</p>
+          <p id="last-film" class="aboutHeader">Last Film Watched</p>
           <div id="movie">
             <img id="movie-img" src="assets/movies/aladdin.jpg"/>
             <p id="movie-txt">Aladdin</p>
