--- a/about.html
+++ b/about.html
@@ -24,7 +24,6 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b" target="_blank">Photography</a></div>
@@ -46,15 +45,15 @@
     <section>
       <div class="about-container">
         <div class="padding-bottom">
-          <p class="aboutHeader">Biography</p>
+          <p class="section-header">Biography</p>
           <p class="about-p about-right-pad" id="about-txt">I’m a third year student studying Cognitive 
-             Science (Design / Interaction concentration) at UC San Diego. Right now, I’m actively applying for UX Design and 
+             Science (Design / Interaction) at UC San Diego. Right now, I’m actively applying for UX Design and 
              Developer internship positions for Summer 2019.</p>
         </div>
         
         <div class="padding-bottom">
-          <p class="aboutHeader">Experience</p>
-          <p class="about-p about-right-pad" id="about-txt">Previously, I’ve had the opportunities to work as a UX Developer 
+          <p class="section-header">Experience</p>
+          <p class="about-p about-right-pad" id="about-txt">I’ve had the opportunities to work as a UX Developer 
              at <a href="http://www.caida.org/home/" id="work-1" target="_blank">CAIDA</a> and as a Data 
              Scientist at <a href="https://www.alphacorecap.com/" id="work-2" target="_blank">AlphaCore Capital</a> 
              before that. Apart from being in the office, you can catch me working on or 
@@ -62,12 +61,12 @@
         </div>
         
         <div class="padding-bottom">
-          <p class="aboutHeader">Interests</p>
+          <p class="section-header">Interests</p>
           <p class="about-p" id="about-txt">On good days, I spend my time burning food calories through basketball, 
              enjoying a thoughtful thriller film, and secretly browsing cat 
              videos on Instagram.</p>
 
-          <p id="last-film" class="aboutHeader">Last Film Watched</p>
+          <span id="last-film" class="section-header">Last Film Watched</span>
           <div id="movie">
             <img id="movie-img" src="assets/movies/aladdin.jpg"/>
             <p id="movie-txt">Aladdin</p>
