--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <body id="body">
   <div class="content-margins">
     <div id="header">
-      <span><a href="https://ajzhen.com"><img src="assets/logo.png" id="logo"></a></span>
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
       <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-b" target="_blank">Photography</a></div>
@@ -45,7 +44,7 @@
     <div id="white-block"></div>
     <div id="color-block"></div>
   
-    <p class="content-header">WORK & INVOLVEMENT</p>
+    <p class="section-header">Work & Involvement</p>
     <section>
       <div class="grid-container-right">
         <div class="grid-item">
